Finished python pandas part

--- a/lab2/Pandas_Getting_Started.ipynb
+++ b/lab2/Pandas_Getting_Started.ipynb
@@ -41,7 +41,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -104,22 +104,25 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>5 rows \u00d7 4 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 2,
        "text": [
         "                                       name country_id  area_sqkm  population\n",
         "0  Algeria                                         ALG    2381741    32853800\n",
         "1  Argentina                                       ARG    2780400    38747150\n",
         "2  Australia                                       AUS    7682300    21050000\n",
         "3  Austria                                         AUT      83858     8189444\n",
-        "4  The Bahamas                                     BAH      13878      323063"
+        "4  The Bahamas                                     BAH      13878      323063\n",
+        "\n",
+        "[5 rows x 4 columns]"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -135,7 +138,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 3,
        "text": [
         "name          object\n",
         "country_id    object\n",
@@ -145,7 +148,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -210,11 +213,12 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>8 rows \u00d7 2 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 4,
        "text": [
         "             area_sqkm    population\n",
         "count        58.000000  5.800000e+01\n",
@@ -224,18 +228,20 @@
         "25%       66775.750000  5.326772e+06\n",
         "50%      307001.500000  1.557348e+07\n",
         "75%      797083.000000  4.616071e+07\n",
-        "max    17098242.000000  1.323324e+09"
+        "max    17098242.000000  1.323324e+09\n",
+        "\n",
+        "[8 rows x 2 columns]"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "## Sort the data\n",
-      "countries.sort(columns='population').head(5)"
+      "countries.sort(columns='population', ascending=True).head(5)"
      ],
      "language": "python",
      "metadata": {},
@@ -291,22 +297,25 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>5 rows \u00d7 4 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 6,
        "text": [
         "                                        name country_id  area_sqkm  population\n",
         "5   Barbados                                        BAR        430      269556\n",
         "29  Iceland                                         ISL     103000      309672\n",
         "4   The Bahamas                                     BAH      13878      323063\n",
         "53  Trinidad and Tobago                             TRI       5130     1305236\n",
-        "20  Estonia                                         EST      45100     1329697"
+        "20  Estonia                                         EST      45100     1329697\n",
+        "\n",
+        "[5 rows x 4 columns]"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -323,13 +332,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 8,
+       "prompt_number": 7,
        "text": [
         "pandas.core.series.Series"
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -343,7 +352,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 8,
        "text": [
         "0    Algeria                                 \n",
         "1    Argentina                               \n",
@@ -354,7 +363,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -403,20 +412,23 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>3 rows \u00d7 4 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 10,
+       "prompt_number": 9,
        "text": [
         "                                       name country_id  area_sqkm  population\n",
         "0  Algeria                                         ALG    2381741    32853800\n",
         "1  Argentina                                       ARG    2780400    38747150\n",
-        "2  Australia                                       AUS    7682300    21050000"
+        "2  Australia                                       AUS    7682300    21050000\n",
+        "\n",
+        "[3 rows x 4 columns]"
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -493,11 +505,12 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>7 rows \u00d7 4 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 11,
+       "prompt_number": 10,
        "text": [
         "                                        name country_id  area_sqkm  population\n",
         "7   Brazil                                          BRA    8514877   186404900\n",
@@ -506,11 +519,13 @@
         "39  Mexico                                          MEX    1958201   107029400\n",
         "42  Nigeria                                         NGR     923768   131529700\n",
         "48  Russia                                          RUS   17098242   143201600\n",
-        "56  United States                                   USA    9629091   301140000"
+        "56  United States                                   USA    9629091   301140000\n",
+        "\n",
+        "[7 rows x 4 columns]"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -593,11 +608,12 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>5 rows \u00d7 7 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 11,
        "text": [
         "                                     name_x   player_id country_id  \\\n",
         "0  Aaron Egbele                              EGBELAAR01        NGR   \n",
@@ -611,11 +627,13 @@
         "1  1977-08-12  Nigeria                                      923768   131529700  \n",
         "2  1977-09-11  Nigeria                                      923768   131529700  \n",
         "3  1971-04-10  Nigeria                                      923768   131529700  \n",
-        "4  1983-06-19  Nigeria                                      923768   131529700  "
+        "4  1983-06-19  Nigeria                                      923768   131529700  \n",
+        "\n",
+        "[5 rows x 7 columns]"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -631,7 +649,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 12,
        "text": [
         "country_id\n",
         "ALG            4\n",
@@ -643,7 +661,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -659,7 +677,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 16,
+       "prompt_number": 13,
        "text": [
         "0     NaN\n",
         "1     NaN\n",
@@ -696,7 +714,7 @@
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -710,13 +728,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 17,
+       "prompt_number": 14,
        "text": [
         "5"
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -765,11 +783,12 @@
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
+        "<p>3 rows \u00d7 4 columns</p>\n",
         "</div>"
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 18,
+       "prompt_number": 15,
        "text": [
         "                                         name   player_id country_id  \\\n",
         "176  Jan Zelezny                               ZELEZJAN01        CZR   \n",
@@ -779,11 +798,13 @@
         "      birthdate  \n",
         "176  1976-11-09  \n",
         "178  1971-09-26  \n",
-        "345  1975-08-25  "
+        "345  1975-08-25  \n",
+        "\n",
+        "[3 rows x 4 columns]"
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
