Finish avro and fixed small sql misunderstanding

--- a/lab2/Lab 2.ipynb
+++ b/lab2/Lab 2.ipynb
@@ -27,7 +27,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -66,7 +66,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -88,13 +88,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 5,
        "text": [
         "84"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -117,7 +117,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 6,
        "text": [
         "1     Aaron Peirsol                           \n",
         "3     Adam Nelson                             \n",
@@ -133,7 +133,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -466,7 +466,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 9,
+       "prompt_number": 7,
        "text": [
         "                                country_name  num_players\n",
         "0   Algeria                                             4\n",
@@ -532,7 +532,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -871,7 +871,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 37,
+       "prompt_number": 8,
        "text": [
         "                                     country  player_count\n",
         "0   Algeria                                              0\n",
@@ -937,7 +937,77 @@
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "Assignment 3 - Avro Schemas"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "We have provided you with a `countries.avro` file which contains information about countries in a serialized form, created using \n",
+      "`serialize_countries.pl`. Your task is to write a python script, called `count.py`, to read the data into a DataFrame, count the \n",
+      "number of countries with population over 10000000 using pandas, and print the count. "
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import avro.schema\n",
+      "from avro.datafile import DataFileReader\n",
+      "from avro.io import DatumReader"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "schema = avro.schema.parse(open(\"country.avsc\").read())\n",
+      "path = open(\"countries.avro\", 'r')\n",
+      "reader = DataFileReader(path, DatumReader(schema))\n",
+      "\n",
+      "# Count the number of rows\n",
+      "n = 0\n",
+      "for data_point in reader:\n",
+      "    n = n + 1\n",
+      "    \n",
+      "# Allocate the DataFrame space\n",
+      "data = np.empty((n,len(schema.fields),))\n",
+      "dTable = pd.DataFrame(data=data, columns = schema.fields_dict.keys())\n",
+      "\n",
+      "# Read in all the columns\n",
+      "reader = DataFileReader(path, DatumReader(schema))\n",
+      "i = 1\n",
+      "for data_point in reader:\n",
+      "    dTable[i-1:i] = [np.transpose(data_point.values())]\n",
+      "    i = i + 1\n",
+      "\n",
+      "    # Print the filtered count\n",
+      "print dTable['population'][dTable['population'] > 10000000].count()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "36\n"
+       ]
+      }
+     ],
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
