Finished P1 of the project -- added additional features and can test P/R

--- a/lab5/Information-Extraction-using-NLTK.ipynb
+++ b/lab5/Information-Extraction-using-NLTK.ipynb
@@ -34,24 +34,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "showing info http://nltk.github.com/nltk_data/\n"
-       ]
-      },
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 1,
-       "text": [
-        "True"
-       ]
-      }
-     ],
-     "prompt_number": 1
+     "outputs": [],
+     "prompt_number": "*"
     },
     {
      "cell_type": "code",
