--- a/lab5/Information-Extraction-using-NLTK.ipynb
+++ b/lab5/Information-Extraction-using-NLTK.ipynb
@@ -34,8 +34,24 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": "*"
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "showing info http://nltk.github.com/nltk_data/\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 1,
+       "text": [
+        "True"
+       ]
+      }
+     ],
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -103,13 +119,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 4,
+       "prompt_number": 3,
        "text": [
         "Tree('S', [('At', 'IN'), ('eight', 'CD'), (\"o'clock\", 'JJ'), ('on', 'IN'), ('Thursday', 'NNP'), ('morning', 'NN'), (',', ','), Tree('PERSON', [('Arthur', 'NNP')]), ('did', 'VBD'), (\"n't\", 'RB'), ('feel', 'VB'), ('very', 'RB'), ('good', 'JJ'), ('.', '.')])"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
@@ -121,7 +137,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -249,7 +265,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -281,7 +297,14 @@
         "[ORG: u'McGlashan &AMP; Sarrail'] u'firm in' [LOC: u'San Mateo']\n",
         "[ORG: u'Freedom Forum'] u'in' [LOC: u'Arlington']\n",
         "[ORG: u'Brookings Institution'] u', the research group in' [LOC: u'Washington']\n",
-        "[ORG: u'Idealab'] u', a self-described business incubator based in' [LOC: u'Los Angeles']\n",
+        "[ORG: u'Idealab'] u', a self-described business incubator based in' [LOC: u'Los Angeles']"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
         "[ORG: u'Open Text'] u', based in' [LOC: u'Waterloo']\n",
         "[ORG: u'WGBH'] u'in' [LOC: u'Boston']\n",
         "[ORG: u'Bastille Opera'] u'in' [LOC: u'Paris']"
@@ -300,7 +323,7 @@
        ]
       }
      ],
-     "prompt_number": 10
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -323,6 +346,124 @@
       "\n",
       "    print(nltk.corpus.ieer.parsed_docs('NYT_19980315')[1].text)"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "imported_stories = [\n",
+      "                    'http://www.nytimes.com/reuters/2014/09/30/business/30reuters-financial-markets-issues.html',\n",
+      "                    'http://www.nytimes.com/reuters/2014/10/03/business/03reuters-alibaba-group-stocks.html',\n",
+      "                    'http://www.nytimes.com/reuters/2014/10/09/business/09reuters-peel-funding.html',\n",
+      "                    'http://www.nytimes.com/reuters/2014/10/16/business/16reuters-china-alibaba.html',\n",
+      "                    'http://www.nytimes.com/aponline/2014/10/21/business/ap-us-earns-yahoo.html',\n",
+      "                    'http://www.nytimes.com/2014/10/21/business/international/to-limit-risks-as-it-enters-china-costco-works-with-alibaba.html',\n",
+      "                    'http://bits.blogs.nytimes.com/2014/10/22/daily-report-yahoo-growing-again-but-strategy-remains-hazy/',\n",
+      "                    'http://www.nytimes.com/reuters/2014/10/22/arts/22reuters-alibabagroup-onlinecontent-china.html?_r=0',\n",
+      "                    'http://www.cnbc.com/id/102020026',\n",
+      "                    'http://www.alizila.com/alibaba-group%E2%80%99s-china-only-wholesale-website-going-abroad'\n",
+      "                    ]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Set up Goose to import in article information\n",
+      "from goose import Goose\n",
+      "import urllib2\n",
+      "import re\n",
+      "g = Goose()\n",
+      "opener = urllib2.build_opener(urllib2.HTTPCookieProcessor())\n",
+      "\n",
+      "# Set up the NLTK parser to be able to extract named entities from\n",
+      "sentence = \"Let's meet Matt tomorrow at 9 pm in CSPAC\";\n",
+      "tokens = nltk.tokenize.word_tokenize(sentence)\n",
+      "pos_tags = nltk.pos_tag(tokens)\n",
+      "chunks = nltk.ne_chunk(pos_tags, binary=False)\n",
+      "\n",
+      "IN = re.compile(r'.*PERSON\\b(\\w+)\\b/.*')\n",
+      "for val in chunks[:]:\n",
+      "    val.pprint()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "AttributeError",
+       "evalue": "'tuple' object has no attribute 'pprint'",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-87-df470bc52a03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mIN\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mr'.*PERSON\\b(\\w+)\\b/.*'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mval\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchunks\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'pprint'"
+       ]
+      }
+     ],
+     "prompt_number": 87
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import re\n",
+      "IN = re.compile(r'.*\\b.*\\s(?:executive|work|chief|for|at).*\\b(?!\\b.+ing)')\n",
+      "for doc in nltk.corpus.ieer.parsed_docs('NYT_19980315'):\n",
+      "    for rel in nltk.sem.extract_rels('PER', 'ORG', doc, corpus='ieer', pattern = IN):\n",
+      "        print(nltk.sem.rtuple(rel))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[PER: u'Mike Godwin'] u', chief counsel for the' [ORG: u'Electronic Frontier Foundation']\n",
+        "[PER: u'Jack Balkin'] u\", director of the school's program. ``What happened at\" [ORG: u'Yale']\n",
+        "[PER: u'William Gale'] u', an economist at the' [ORG: u'Brookings Institution']\n",
+        "[PER: u'Joel Slemrod'] u', an economist at the' [ORG: u'University of Michigan']\n",
+        "[PER: u'Alan Braverman'] u', Internet analyst at' [ORG: u'Credit Suisse First Boston']"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "[PER: u'Abe Kleinfield'] u', a vice president at' [ORG: u'Open Text']\n",
+        "[PER: u'Lorne Michaels'] u\", the executive producer of ``Saturday Night Live.''\" [ORG: u'TV Books']\n",
+        "[PER: u'Rick Yorn'] u', his manager at the firm' [ORG: u'Addis-Wechsler &AMP; Associates']\n",
+        "[PER: u'Tom Rothman'] u', president of production at' [ORG: u'20th Century Fox']\n",
+        "[PER: u'Charlotte Forest'] u', executive producer for' [ORG: u'Homestead Editorial']\n",
+        "[PER: u'Richard Strauss'] u\"' ``Salome'' at\" [ORG: u'La Scala']"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "[PER: u'John Wren'] u', the president and chief executive at' [ORG: u'Omnicom']\n",
+        "[PER: u'Linda Kaplan Thaler'] u', who worked at' [ORG: u'Wells']\n",
+        "[PER: u'Kaplan Thaler'] u'had worked for' [ORG: u\"Toys ``R'' Us\"]\n",
+        "[PER: u'Ken Haldin'] u', a spokesman for' [ORG: u'Georgia-Pacific']\n"
+       ]
+      }
+     ],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
